--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rest-api",
-  "version": "1.0.1",
+  "version": "1.1.0",
   "description": "rest api using nodejs, ts and mysql",
   "main": "index.js",
   "scripts": {
@@ -20,9 +20,12 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-session": "^1.18.0",
     "joi": "^17.12.3",
     "jsonwebtoken": "^9.0.2",
+    "moment": "^2.30.1",
     "multer": "^1.4.5-lts.1",
-    "mysql2": "^3.9.4"
+    "mysql2": "^3.9.4",
+    "uuidv4": "^6.2.13"
   }
 }
